fix click event on mobile devices

--- a/content/style/style.css
+++ b/content/style/style.css
@@ -20,6 +20,7 @@ body{
     #container{
         height: 600px;
         width: 800px;
+        cursor: pointer;
     }
 }
 
